...

                <TextView
                    android:id="@+id/transaction_header_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/grid_margin_left"
                    android:layout_marginTop="@dimen/grid_margin_top"
                    android:text="@string/mobileTransactionTypeLabel"
                    android:textAppearance="@style/TextAppearance.Hyperwallet.HeaderTitle" />
            </LinearLayout>
...

                <TextView
                    android:id="@+id/receipt_details_header_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mobileTransactionDetailsLabel"
                    android:layout_marginStart="@dimen/grid_margin_left"
                    android:layout_marginTop="@dimen/grid_margin_top"
...

                    <TextView
                        android:id="@+id/receipt_id_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="@dimen/grid_margin_top"
                        android:text="@string/mobileJournalNumberLabel"
                        android:textIsSelectable="true"
                        android:focusable="true"
...

                    <TextView
                        android:id="@+id/receipt_id_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/date_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/item_text_top_bottom_margin"
                        android:text="@string/date"
                        android:textIsSelectable="true"
                        android:focusable="true"
...

                    <TextView
                        android:id="@+id/date_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/client_id_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="@dimen/item_text_top_bottom_margin"
                        android:text="@string/mobileMerchantTxnLabel"
                        android:textIsSelectable="true"
                        android:focusable="true"
...

                    <TextView
                        android:id="@+id/client_id_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/charity_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="@dimen/item_text_top_bottom_margin"
                        android:text="@string/mobileCharityName"
                        android:textIsSelectable="true"
                        android:focusable="true"
...
                              app:layout_constraintStart_toStartOf="parent"/>

                    <TextView android:id="@+id/charity_value"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/check_number_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="@dimen/item_text_top_bottom_margin"
                        android:text="@string/mobileCheckNumber"
                        android:textIsSelectable="true"
                        android:focusable="true"
...

                    <TextView
                        android:id="@+id/check_number_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/website_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="@dimen/item_text_top_bottom_margin"
                        android:text="@string/mobilePromoWebsite"
                        android:textIsSelectable="true"
                        android:focusable="true"
...

                    <TextView
                        android:id="@+id/website_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/receipt_notes_header_label"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/grid_margin_left"
                        android:layout_marginEnd="@dimen/grid_margin_right"
                        android:text="@string/mobileConfirmNotesLabel"
                        android:layout_marginTop="@dimen/grid_margin_top"
                        android:textAppearance="@style/TextAppearance.Hyperwallet.HeaderTitle" />
...

                    <TextView
                        android:id="@+id/notes_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/details_header_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/grid_margin_left"
                        android:layout_marginEnd="@dimen/grid_margin_right"
                        android:text="@string/mobileFeeInfoLabel"
                        android:layout_marginTop="@dimen/grid_margin_top"
                        android:textAppearance="@style/TextAppearance.Hyperwallet.HeaderTitle" />
...

                    <TextView
                        android:id="@+id/details_amount_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="@dimen/grid_margin_top"
                        android:text="@string/amount"
                        android:textIsSelectable="true"
                        android:focusable="true"
...

                    <TextView
                        android:id="@+id/details_amount_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/details_fee_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="@dimen/grid_margin_top"
