<resources>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_connectivity_title">Connectivity Issue</string>
    <string name="error_dialog_unexpected_title">Unexpected Error</string>
    <string name="ok">OK</string>
    <string name="try_again_button_label">Try again</string>
    <string name="not_available">Not Available</string>

    <!-- title and font icon -->
    <string name="bank_account">Bank Account</string>
    <string name="bank_card">Debit Card</string>
    <string name="wire_account">Wire Transfer Account</string>
...

    <string name="endingIn">ending in %s</string>
    <string name="to">to %s</string>
    <string name="not_translated_in_braces">(not translated)</string>

    <string name="authentication_error_header">Authentication Error</string>
    <string name="cancelButtonLabel">Cancel</string>
    <string name="edit" translatable="false">Edit</string>
    <string name="remove">Remove</string>
    <string name="remove_transfer_method_title" translatable="false">Remove this transfer method?</string>
    <string name="navigate_back_description" translatable="false">Navigate back</string>
    <string name="transfer_method_add_transfer_button_description" translatable="false">Add a new transfer method</string>
</resources>
...
